# ngwpc-cookbooks

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
cookbooks/HEFS/: get_ensembles.ipynb
cookbooks/coastal/: build.sh  make_sflux.ipynb  map_schism_output.ipynb  requirements.txt
cookbooks/hydrofabric/: hydrofabric_builds.ipynb  sample_divides.gpkg  sample_flowpaths.gpkg  sample_huc.gpkg  workflow.py
tests/: __init__.py
